Fix rando background on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2985,7 +2985,7 @@
 		/* Header */
 
 			#header {
-				background-image: url("images/top-1280.svg"), url("http://i.imgur.com/oWekZRf.jpg"), url("../../images/header.jpg");
+				background-image: url("images/top-1280.svg"), url("images/white.png"), url("../../images/header.jpg");
 				background-size: 1280px 184px,						auto,							cover;
 				padding: 3em 0 7em 0;
 			}
